# Box2dSandbox

./: .gitmodules  CMakeLists.txt  main.cpp  mnist_test.cpp  physic_body_constructor.cpp
CMake/: Box2DCMakeLists.txt.in  git_submodule_build.cmake  git_submodule_update.cmake  prepare_box2d_build.cmake
src/: Engine.cpp  Engine.hpp  EngineState.hpp  gameMain.cpp  ui_callbacks.cpp
src/core/: DerivedObjectManager.hpp  FpsCounter.hpp  FunctionMap.hpp  HeterogenMap.hpp  IndexedHashStorage.hpp  flags.hpp  helper_macros.hpp  math.hpp  time.cpp  time.hpp  types.hpp
src/core/ftl/: vector2.hpp
src/file_formats/: SimpleSerializer.hpp  TruevisionImage.hpp
src/game/: HolderJointProcessor.cpp  HolderJointProcessor.hpp  JointProcessor.hpp  KeyCombo.cpp  KeyCombo.hpp  MotionInterfaces.cpp  MotionInterfaces.hpp  PhysicBodyBase.hpp  PhysicHumanBody.cpp  PhysicHumanBody.hpp  PhysicSimulation.cpp  PhysicSimulation.hpp  RepeaterJointProcessor.cpp  RepeaterJointProcessor.hpp
src/graphics/: Camera.cpp  Camera.hpp  CameraManipulator.cpp  CameraManipulator.hpp  DrawableManager.hpp  FontManager.cpp  FontManager.hpp  HUD.cpp  HUD.hpp  MainWindow.cpp  MainWindow.hpp  ObjectManager.hpp  Window.cpp  Window.hpp  nuklear.cpp  nuklear.hpp  nuklear_sfml_gl3.h
src/machine_learning/: ActivationFunctions.hpp  FeedForwardNeuralNetwork.hpp  Genetic.hpp  Initializers.hpp  MnistDataset.cpp  MnistDataset.hpp  NeuralNetwork.hpp  Neuron.hpp  NeuronModel.hpp  SimpleSerializer.hpp  Synapse.hpp  SynapseModel.hpp  TruevisionImage.hpp
src/machine_learning/details/: Exception.hpp  FixedStorage.hpp  FixedVector.hpp  FixedView.hpp  GlobalStateHelper.hpp  Types.hpp  md5.hpp
src/utils/: ReaderWriter.cpp  ReaderWriter.hpp  SimpleSerializer.hpp  TruevisionImage.hpp
